fix owasp dependency scan